# ROS_Control

./: .gitignore  Commands  README.md  frames.gv
Documentation/: Report_Casimir_Sowinski (copy).odt  Report_Casimir_Sowinski_2.docx  Report_Casimir_Sowinski_2.odt  Report_Casimir_Sowinski_FINAL.docx  Robot_ROS_Report.odt  pick_and_place  things to update .odt
dummy_markers/: CMakeLists.txt  package.xml
dummy_markers/src/: dummy_markers_node.cpp
rbx2/rbx2_utils/: package.xml~
robo_arduino/: CMakeLists.txt  package.xml  package.xml~
robo_arduino/config/: robo.yaml  robo.yaml~  robo_right_arm_only.yaml
robo_arm_nav/: CMakeLists.txt  mainpage.dox  package.xml  package.xml~  setup.py
robo_arm_nav/config/: arm_nav.rviz
robo_arm_nav/nodes/: arm_tracker.py
robo_arm_nav/scripts/: fetch_tuck_arm.py  fetch_tuck_arm.py~  get_arm_pose.py  get_arm_pose.py~  moveit_fk_demo.py  moveit_fk_demo.py~  moveit_ik_demo.py  moveit_ik_demo.py~  my_script.py  my_script.py~  pick_and_place_demo.py  pick_and_place_demo.py~  test  trajectory_demo.py~  trajectory_ready.py  trajectory_ready.py~
robo_bash/: CMakeLists.txt  arbotix.bash  arbotix.bash~  move_group.bash  move_group.bash~  package.xml  package.xml~  pickandplace.bash  pickandplace.bash~  realsense.bash  realsense.bash~  robo_script.bash  robo_script.bash~  robo_script2.bash~  rviz.bash  rviz.bash~
robo_bash/scripts/: arbotix.bash  arbotix.bash~  move_group.bash  pickandplace.bash  realsense.bash  robo_script2.bash  robo_script_OLD.bash  rviz.bash
robo_bringup/: CMakeLists.txt  config.rviz  mainpage.dox  package.xml  package.xml~  test.rviz
robo_bringup/config/: robo.yaml  robo.yaml~  robo_two_arms_realsense.yaml  robo_two_arms_realsense.yaml~  robo_with_gripper.yaml
robo_bringup/launch/: my_script.py~  pi_robot_head_only.launch  robo.launch  robo.launch~  robo_test.launch  robo_test.launch~  robo_two_arms_camera.launch  robo_two_arms_camera.launch~  robo_two_arms_realsense.launch  robo_two_arms_realsense.launch~  robo_with_gripper.launch
robo_description/: package.xml  package.xml~  urdf.rviz  urdf.rviz~
robo_description/launch/: base.launch  display.launch  display.launch~  robo_base_only.launch  robo_base_only.launch~  robo_two_arms_camera.launch
robo_description/meshes/arm/col/: col_left_biceps_03.STL  col_left_forearm_03.STL  col_left_hand_03.STL  col_left_index_03.STL  col_left_shouldera_03.STL  col_left_shoulderb_03.STL  col_left_thumb_03.STL  col_right_forearm_03.STL  col_right_hand_03.STL  col_right_index_03.STL  col_right_shouldera_03.STL  col_right_shoulderb_03.STL  col_right_thumb_03.STL  col_shouldera_03.STL
robo_description/meshes/arm/vis/: vis_left_biceps_03.STL  vis_left_forearm_03.STL  vis_left_hand_03.STL  vis_left_index_03.STL  vis_left_shouldera_03.STL  vis_left_shoulderb_03.STL  vis_left_thumb_03.STL  vis_right_forearm_03.STL  vis_right_hand_03.STL  vis_right_index_03.STL  vis_right_shouldera_03.STL  vis_right_shoulderb_03.STL  vis_right_thumb_03.STL  vis_shouldera_03.STL
robo_description/meshes/base/col/: col_basewheels_01.STL  col_basewheels_03.STL
robo_description/meshes/base/vis/: vis_basewheels_01.STL  vis_basewheels_03.STL
robo_description/meshes/camera/col/: Dropped Text.txt  col_camera_03.STL
robo_description/meshes/camera/vis/: DaftPunk.STL  DaftPunk.dae  vis_camera_03.STL
robo_description/meshes/torso/col/: col_torso_03.STL
robo_description/meshes/torso/vis/: vis_torso_03.STL
robo_description/urdf/: base.urdf.xacro~  materials.urdf.xacro  materials.urdf.xacro~  robo.urdf  robo.urdf~  robo_arm.urdf.xacro  robo_arm.urdf.xacro~  robo_base.urdf.xacro  robo_base.urdf.xacro~  robo_camera.urdf.xacro  robo_camera.urdf.xacro~  robo_daftpunk.urdf.xacro  robo_gripper.urdf.xacro  robo_gripper.urdf.xacro~  robo_static.urdf  robo_torso.urdf.xacro  robo_torso.urdf.xacro~  robo_two_arms_camera.xacro  robo_two_arms_camera.xacro~  robo_two_arms_realsense.xacro  robo_two_arms_realsense.xacro~  robo_with_camera.xacro  robo_with_camera.xacro~  save.urdf.xacro  save.urdf.xacro~  static_robo_two_arms.urdf
robo_misc/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py
robo_misc/nodes/: head_tracker.py  head_tracker.py~  pub_3d_target.py  pub_3d_target.py~  pub_tf_frame.py  robo_pub_3d_target.py
robo_misc/scripts/: head_trajectory_demo.py
robo_moveit_config/: .setup_assistant  package.xml  package.xml~
robo_moveit_config/config/: controllers.yaml  controllers.yaml~  fake_controllers.yaml  fake_controllers.yaml~  joint_limits.yaml  joint_names.yaml  joint_names.yaml~  joint_names_1.yaml~  joint_names_2.yaml~  kinematics.yaml  kinematics.yaml~  ompl_planning.yaml  ompl_planning.yaml~  (+2 more)
robo_moveit_config_test/: .setup_assistant  CMakeLists.txt  package.xml
robo_realsense/: CMakeLists.txt  package.xml  package.xml~
robo_realsense/launch/: realsense_r200_launch.launch  realsense_r200_launch.launch.bak  realsense_r200_launch.launch~
robo_setup_tf/: package.xml  package.xml~
robo_setup_tf/src/: tf_broadcaster.cpp  tf_listener.cpp~
scene/: scene_01.scene  table.scene  table_hammer.scene  table_hammer_tube.scene
trans_joint/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
trans_joint/msg/: translated_array.msg
trans_joint/src/: translate.cpp  translate.cpp~  translate_2.cpp~  translate_old.cpp  translate_old.cpp~  translate_old_2.cpp  translate_old_2.cpp~
(+75 files in other folders)
