<?xml version="1.0"?>
<package>
  <name>robo_realsense</name>
  <version>0.0.1</version>
  <description>The robo_realsense package</description>

  <!-- Originally written by -->
  <maintainer email="amit.moran@intel.com">Amit Moran</maintainer>
  <license>See license attached.</license>
  <url type="website">https://github.com/PercATI/RealSense-ROS</url>
  <author email="amit.moran@intel.com">Amit Moran</author>

  <!-- Modified version -->
  <maintainer email="casimirsowinski@gmail.com">Casimir Sowinski</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/casimirsowinski/robo_hand_01.git</url>
  <author email="casimirsowinski@gmail.com">Casimir Sowinski</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  	<nodelet plugin="${prefix}/r200_nodelet_plugins.xml" />
  </export>

</package>
