<?xml version="1.0"?>
<package>
  <!--************************OLD******************************-->
  <name>robo_setup_tf</name>
  <version>0.0.0</version>
  <description>The robo_setup_tf package</description>

  <maintainer email="casimirsowinski@gmail.com">Casimir Sowinski</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/casimirsowinski/robo_hand_01.git</url>
  <author email="casimirsowinski@gmail.com">Casimir Sowinski</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

</package>
