<?xml version="1.0"?>
<package>
  <name>trans_joint</name>
  <version>0.0.0</version>
  <description>The trans_joint package subscribes to joint_state messages and publishes Float64MultiArray messages for the Arduino</description>

  <maintainer email="casimirsowinski@gmail.com">Casimir Sowinski</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/casimirsowinski/robo_hand_01.git</url>
  <author email="casimirsowinski@gmail.com">Casimir Sowinski</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
